syntax = "proto3";

import "messageCode.proto";

package user;

option java_multiple_files = true;
option java_package = "ru.nikitavov.scheduleClasses.grpc";
option java_outer_classname = "UserProto";

service User {
  rpc Create (CreateUserRequest) returns (CreateUserResponse) {}
  rpc Read (ReadUserRequest) returns (ReadUserResponse) {}
  rpc Edit (EditUserRequest) returns (EditUserResponse) {}
  rpc Delete (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc Authorization (AuthorizationUserRequest) returns (AuthorizationUserResponse) {}
}

message CreateUserRequest {
  int64 roleId = 1;
  string name = 2;
  string login = 3;
  string password = 4;
  string mail = 5;
}

message CreateUserResponse {
  MessageCode code = 1;
  string field = 2;
}

message ReadUserRequest {
  int64 userId = 1;
}

message ReadUserResponse {
  MessageCode code = 1;
  int64 userId = 2;
  int64 roleId = 3;
  string name = 4;
  string login = 5;
  string mail = 6;
}

message EditUserRequest {
  int64 userId = 1;
  int64 roleId = 2;
  string name = 3;
  string login = 4;
  string password = 5;
  string mail = 6;
}

message EditUserResponse {
  MessageCode code = 1;
  string field = 2;
}

message DeleteUserRequest {
  int64 userId = 1;
}

message DeleteUserResponse {
  MessageCode code = 1;
}

message AuthorizationUserRequest {
  string login = 1;
  string password = 2;
}

message AuthorizationUserResponse {
  MessageCode code = 1;
  string message = 2;
  bool isLogin = 3;
}

